<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/welcome"
            android:textColor="@color/gold"
            android:textSize="10pt"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:background="@drawable/border_title"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:singleLine="false"
            android:phoneNumber="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:text="@string/artistLabel"
                android:id="@+id/artistLabel"
                android:textColor="@color/dark_blue"
                android:background="@drawable/border_label_opp"
                android:textStyle="bold"
                android:textSize="8pt" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:text="@string/songLabel"
                android:id="@+id/songLabel"
                android:textColor="@color/dark_blue"
                android:background="@drawable/border_label"
                android:textStyle="bold"
                android:textSize="8pt" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/border_box">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:id="@+id/selectedArtist"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:id="@+id/selectedSong"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/spinButton"
            android:gravity="center"
            android:src="@mipmap/ic_spin"
            android:background="@null"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/songListTitle"
            android:id="@+id/songBank"
            android:gravity="center"
            android:textSize="8pt"
            android:background="@drawable/border_title"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/songs">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:id="@+id/editSongs"
                android:layout_gravity="center_vertical"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:hint="@string/songText" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/addSongs"
                android:id="@+id/addSongsButton"
                android:layout_gravity="end" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artistListTitle"
            android:gravity="center"
            android:id="@+id/artistBank"
            android:textSize="8pt"
            android:background="@drawable/border_title"
            android:textStyle="bold"
            android:textColor="@color/gray" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/artists">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:id="@+id/editArtists"
                android:hint="@string/artistText"
                android:layout_gravity="center_vertical"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/addArtists"
                android:id="@+id/addArtistsButton"
                android:layout_gravity="end" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="9dp"
            android:src="@drawable/border_title"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="bottom"
            android:src="@drawable/border_title"/>

    </LinearLayout>

</ScrollView>

